# loongdiff-win

./: .clang-format  .gitattributes  .gitignore  README.md  check_vcdiff_patch_identical.hexpat  config.h.in  meson.build
.github/workflows/: build-and-test-ldiff.yml  release-ldiff.yml
assets/: ldiff.rc
src/: core.hpp  file.ixx  fmt.ixx  ldiff.cc  pbar.hpp  tool.hpp  traits.hpp
subprojects/: CLI11.wrap
terminalizer/: apply.yml  config.yml  diff.yml  usage.yml
tests/: file_pe_test.py  file_test.py  folder_pe_test.py  folder_test.py  ldiff_test_common.py  meson.build  small_file_test.py
